<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.settings.SettingsFragment"
android:background="#f5f7f6" android:orientation="vertical">

    <android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@android:color/white" android:elevation="1dp"
    android:translationZ="1dp">

        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:src="@drawable/ic_chevron_left_24dp" style="@style/Widget.AppCompat.ActionButton.CloseMode"
        android:id="@+id/settings_back_button"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/settings_title" android:textAlignment="center"
        android:textSize="18sp" android:layout_marginTop="12dp"
        android:textColor="@android:color/black"/>

    </android.support.v7.widget.CardView>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_marginTop="24dp" android:background="@android:color/white"
    android:paddingStart="40dp" android:elevation="1dp" android:translationZ="1dp"
    android:id="@+id/settings_to_profile">

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:orientation="vertical">

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/settings_profile_title" android:textColor="@android:color/black"
            android:layout_margin="8dp"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/settings_profile_default"
                      android:layout_margin="8dp"/>

        </LinearLayout>

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@drawable/ic_chevron_right_24dp" android:layout_alignParentEnd="true"
                   android:layout_marginEnd="8dp" android:layout_marginTop="20dp"/>

    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="24dp" android:background="@android:color/white"
                    android:paddingStart="40dp" android:elevation="1dp" android:translationZ="1dp"
    android:id="@+id/settings_to_city">

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/settings_city_title" android:textColor="@android:color/black"
                      android:layout_margin="8dp"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/settings_city_default" android:id="@+id/settings_user_city"
                      android:layout_margin="8dp"/>

        </LinearLayout>

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@drawable/ic_chevron_right_24dp" android:layout_alignParentEnd="true"
                   android:layout_marginEnd="8dp" android:layout_marginTop="20dp"/>

    </RelativeLayout>

</LinearLayout>