<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".ui.profile.ProfileFragment" android:orientation="vertical" android:background="#F5F7F6">

    <android.support.v7.widget.CardView android:layout_width="48dp"
                                        android:layout_height="48dp" android:layout_alignParentEnd="true"
    android:layout_marginEnd="24dp" android:layout_marginTop="24dp"
    android:elevation="4dp" android:translationZ="4dp" app:cardCornerRadius="24dp">

        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:src="@drawable/ic_edit_24dp" style="@style/Widget.AppCompat.ActionButton.CloseMode"
                     android:id="@+id/profile_redact_button"
                     android:contentDescription="@string/content_description_button_back"/>

    </android.support.v7.widget.CardView>

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

        <android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:background="@android:color/white" android:elevation="1dp"
                        android:translationZ="1dp">

            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:src="@drawable/ic_chevron_left_24dp"
                         style="@style/Widget.AppCompat.ActionButton.CloseMode"
                         android:id="@+id/profile_back_button"
                         android:contentDescription="@string/content_description_button_back"/>

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/profile_title" android:textAlignment="center"
                      android:textSize="18sp" android:layout_marginTop="12dp"
                      android:textColor="@android:color/black"/>

        </android.support.v7.widget.CardView>

        <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical">

                <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                    android:layout_height="wrap_content" android:layout_marginTop="8dp">

                    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:orientation="vertical" android:paddingStart="16dp" android:paddingEnd="16dp">

                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:text="@string/profile_label_login" android:textSize="18sp" android:padding="4dp"/>

                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:id="@+id/profile_user_login" android:padding="4dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                    android:layout_height="wrap_content" android:layout_marginTop="8dp">

                    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:orientation="vertical" android:paddingStart="16dp" android:paddingEnd="16dp">

                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:text="@string/profile_label_name" android:textSize="18sp" android:padding="4dp"/>

                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:id="@+id/profile_user_name" android:padding="4dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                    android:layout_height="wrap_content" android:layout_marginTop="8dp">

                    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:orientation="vertical" android:paddingStart="16dp" android:paddingEnd="16dp">

                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:text="@string/profile_label_email" android:textSize="18sp" android:padding="4dp"/>

                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:id="@+id/profile_user_email" android:padding="4dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                    android:layout_height="wrap_content" android:layout_marginTop="8dp">

                    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:orientation="vertical" android:paddingStart="16dp" android:paddingEnd="16dp">

                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:text="@string/profile_label_phone" android:textSize="18sp" android:padding="4dp"/>

                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:id="@+id/profile_user_phone" android:padding="4dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:gravity="center">

                    <android.support.v7.widget.CardView android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content" app:cardCornerRadius="24dp"
                                                        android:layout_marginTop="8dp" android:layout_marginBottom="8dp">

                        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:text="@string/profile_sing_out" style="@style/Widget.AppCompat.Button.Borderless"
                                android:id="@+id/profile_sing_out_button"/>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                    android:layout_height="wrap_content">

                    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:orientation="vertical" android:paddingStart="8dp"
                                  android:paddingEnd="8dp" android:id="@+id/profile_city_layout">

                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:text="@string/profile_label_city" android:textColor="@android:color/black"
                                  android:layout_margin="8dp"/>

                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:text="@string/profile_city_default" android:id="@+id/profile_user_city"
                                  android:layout_margin="8dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                          android:text="@string/profile_callback_title" android:layout_marginTop="8dp"
                          android:textAlignment="center" android:textSize="16sp"
                          android:textColor="@android:color/black"/>

                <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                app:cardCornerRadius="16dp" android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp">

                    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:hint="@string/profile_callback_hint" android:background="@android:color/transparent"
                    android:padding="8dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp"
                    android:inputType="textMultiLine" android:id="@+id/profile_callback_input"/>

                </android.support.v7.widget.CardView>

                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:gravity="center">

                    <android.support.v7.widget.CardView android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content" app:cardCornerRadius="24dp"
                                                        android:layout_marginTop="8dp" android:layout_marginBottom="8dp">

                        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:text="@string/profile_callback_button" style="@style/Widget.AppCompat.Button.Borderless"
                                android:id="@+id/profile_callback_button" android:paddingStart="40dp"
                        android:paddingEnd="40dp"/>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>