<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".ui.login.LoginFragment" android:orientation="vertical"
             android:background="#f5f7f6">

    <android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:background="@android:color/white" android:elevation="1dp"
                    android:translationZ="1dp">

        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:src="@drawable/ic_chevron_left_24dp" style="@style/Widget.AppCompat.ActionButton.CloseMode"
                     android:id="@+id/login_back_button"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/login_title" android:textAlignment="center"
                  android:textSize="18sp" android:layout_marginTop="12dp"
                  android:textColor="@android:color/black"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="24dp" app:cardCornerRadius="20dp"
                                        android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
    android:background="@android:color/white">

        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
        android:background="@android:color/transparent" android:textAlignment="center"
        android:hint="@string/login_hint_login" android:layout_margin="8dp"
        android:inputType="text" android:id="@+id/login_input_login"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="24dp" app:cardCornerRadius="20dp"
                                        android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
                                        android:background="@android:color/white">

        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:background="@android:color/transparent" android:textAlignment="center"
                  android:hint="@string/login_hint_password" android:layout_margin="8dp"
        android:inputType="textPassword" android:id="@+id/login_input_password"/>

    </android.support.v7.widget.CardView>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginTop="16dp" android:orientation="horizontal"
                  android:layout_marginStart="40dp" android:layout_marginEnd="40dp">

        <android.support.v7.widget.CardView android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            app:cardCornerRadius="20dp" android:layout_margin="8dp"
                                            android:background="@android:color/white" android:layout_weight="2">

            <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:background="@android:color/transparent" android:textAlignment="center"
                    android:text="@string/login_sing_in" android:id="@+id/login_sing_in_button"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            app:cardCornerRadius="20dp" android:layout_margin="8dp"
                                            android:background="@android:color/white" android:layout_weight="1">

            <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:background="@android:color/transparent" android:textAlignment="center"
                    android:text="@string/login_to_registration" android:id="@+id/login_to_registration_button"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
    android:textAlignment="center" android:text="@string/login_or"
    android:layout_marginTop="24dp"/>

</LinearLayout>