<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".ui.registration.RegistrationFragment" android:orientation="vertical"
             android:background="#f5f7f6">

    <android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:background="@android:color/white" android:elevation="1dp"
                    android:translationZ="1dp">

        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:src="@drawable/ic_chevron_left_24dp" style="@style/Widget.AppCompat.ActionButton.CloseMode"
                     android:id="@+id/registration_back_button" android:contentDescription="@string/content_description_button_back"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/registration_title" android:textAlignment="center"
                  android:textSize="18sp" android:layout_marginTop="12dp"
                  android:textColor="@android:color/black"/>

    </android.support.v7.widget.CardView>

    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">

            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="12dp" app:cardCornerRadius="20dp"
                                                android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
                                                android:background="@android:color/white">

                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:background="@android:color/transparent" android:textAlignment="center"
                          android:hint="@string/registration_hint_name" android:layout_margin="8dp"
                          android:id="@+id/registration_input_name" android:inputType="text"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="12dp" app:cardCornerRadius="20dp"
                                                android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
                                                android:background="@android:color/white">

                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:background="@android:color/transparent" android:textAlignment="center"
                          android:hint="@string/registration_hint_login" android:layout_margin="8dp"
                          android:id="@+id/registration_input_login" android:inputType="text"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="12dp" app:cardCornerRadius="20dp"
                                                android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
                                                android:background="@android:color/white">

                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:background="@android:color/transparent" android:textAlignment="center"
                          android:hint="@string/registration_hint_email" android:layout_margin="8dp"
                          android:id="@+id/registration_input_email" android:inputType="textEmailAddress"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="12dp" app:cardCornerRadius="20dp"
                                                android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
                                                android:background="@android:color/white">

                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:background="@android:color/transparent" android:textAlignment="center"
                          android:hint="@string/registration_hint_phone" android:layout_margin="8dp"
                          android:id="@+id/registration_input_phone" android:inputType="phone"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="12dp" app:cardCornerRadius="20dp"
                                                android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
                                                android:background="@android:color/white">

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:textAlignment="center" android:textSize="18sp"
                          android:hint="@string/registration_hint_birthday" android:layout_margin="8dp"
                          android:id="@+id/registration_input_birthday"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="12dp" app:cardCornerRadius="20dp"
                                                android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
                                                android:background="@android:color/white">

                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:background="@android:color/transparent" android:textAlignment="center"
                          android:hint="@string/registration_hint_password" android:layout_margin="8dp"
                          android:id="@+id/registration_input_password" android:inputType="textPassword"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="12dp" app:cardCornerRadius="20dp"
                                                android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
                                                android:background="@android:color/white">

                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:background="@android:color/transparent" android:textAlignment="center"
                          android:hint="@string/registration_hint_repeat_password" android:layout_margin="8dp"
                          android:id="@+id/registration_input_repeat_password" android:inputType="textPassword"/>

            </android.support.v7.widget.CardView>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_marginTop="24dp" android:orientation="horizontal"
                          android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
                          android:gravity="center">

                <android.support.v7.widget.CardView android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content" android:layout_margin="4dp"
                                                    app:cardCornerRadius="20dp" android:background="@android:color/white">

                    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:background="@android:color/transparent" android:textAlignment="center"
                            android:text="@string/registration_sing_up" android:id="@+id/registration_sing_up_button"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:paddingStart="8dp" android:paddingEnd="8dp"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>